--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -33,8 +33,10 @@
                     </h3>
                     <p:commandButton value="#{msgs.speichern}"
                                      action="#{BenutzerverwaltungForm.save}"
+                                     update="notifications"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
+                                     onclick="PF('notifications').renderMessage({'summary':'#{msgs.userSaving}','detail':'#{msgs.userYouWillBeRedirected}','severity':'info'});"
                                      styleClass="button-filled-blue"/>
                 </p:panel>
                 <!-- main form -->
