--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -35,7 +35,9 @@
                                      action="#{LdapGruppenForm.Speichern}"
                                      icon="fa fa-floppy-o fa-lg"
                                      iconPos="right"
-                                     styleClass="button-filled-blue"/>
+                                     styleClass="button-filled-blue"
+                                     onclick="PF('notifications').renderMessage({'summary':'#{msgs.ldapgroupSaving}','detail':'#{msgs.ldapgroupYouWillBeRedirected}','severity':'info'});"
+                                     update="notifications"/>
                 </p:panel>
                 <!-- main form -->
                 <p:panel>
