--- a/Kitodo/src/main/webapp/pages/inc/tbl_Navigation.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc/tbl_Navigation.xhtml
@@ -105,7 +105,7 @@
                                 </h:link>
 
                             <!-- Prozessübersicht -->
-                                <sec:authorize access="hasAuthority('admin')">
+                                <sec:authorize access="hasAnyAuthority('admin','manager','user')">
                             <h:commandLink styleClass="mlink" id="allProcesses"
                                            rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}"
                                            action="#{ProzessverwaltungForm.filterCurrentProcesses}"
@@ -115,7 +115,6 @@
                                 </h:panelGroup>
                                 <h:outputText value="#{msgs.aktuelleProzesse}" />
                             </h:commandLink>
-
 
 
                                     <!-- batches -->
