--- a/Kitodo/src/main/webapp/pages/BenutzerBearbeiten.xhtml
+++ b/Kitodo/src/main/webapp/pages/BenutzerBearbeiten.xhtml
@@ -151,7 +151,7 @@
                                                         <h:panelGroup id="id26">
                                                             <h:inputSecret redisplay="true" id="passwort"
                                                                            style="width: 300px;margin-right:15px"
-                                                                           value="#{BenutzerverwaltungForm.userObject.passwordDecrypted}"
+                                                                           value="#{BenutzerverwaltungForm.password}"
                                                                            required="true"/>
                                                             <t:message id="id27" for="passwort" style="color: red"
                                                                        replaceIdWithLabel="true"/>
