--- a/Kitodo/src/main/webapp/pages/PasswortAendern.xhtml
+++ b/Kitodo/src/main/webapp/pages/PasswortAendern.xhtml
@@ -92,25 +92,25 @@
 
 
                                                         <!-- neues passwort -->
-                                                        <h:outputLabel id="id11" for="passwortAendernNeu1"
+                                                        <h:outputLabel id="id11" for="newPassword"
                                                                        value="#{msgs.neuesPasswort}"/>
                                                         <h:panelGroup id="id12">
-                                                            <h:inputSecret redisplay="true" id="passwortAendernNeu1"
+                                                            <h:inputSecret redisplay="true" id="newPassword"
                                                                            style="width: 200px;margin-right:15px"
-                                                                           value="#{LoginForm.passwortAendernNeu1}"
+                                                                           value="#{LoginForm.newPassword}"
                                                                            required="true"/>
-                                                            <t:message id="id13" for="passwortAendernNeu1"
+                                                            <t:message id="id13" for="newPassword"
                                                                        style="color: red" replaceIdWithLabel="true"/>
                                                         </h:panelGroup>
 
-                                                        <h:outputLabel id="id14" for="passwortAendernNeu2"
+                                                        <h:outputLabel id="id14" for="newPasswordRepeated"
                                                                        value="#{msgs.neuesPasswort}"/>
                                                         <h:panelGroup id="id15">
-                                                            <h:inputSecret redisplay="true" id="passwortAendernNeu2"
+                                                            <h:inputSecret redisplay="true" id="newPasswordRepeated"
                                                                            style="width: 200px;margin-right:15px"
-                                                                           value="#{LoginForm.passwortAendernNeu2}"
+                                                                           value="#{LoginForm.newPasswordRepeated}"
                                                                            required="true"/>
-                                                            <t:message id="id16" for="passwortAendernNeu2"
+                                                            <t:message id="id16" for="newPasswordRepeated"
                                                                        style="color: red" replaceIdWithLabel="true"/>
                                                         </h:panelGroup>
 
