corrected code style

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -48,7 +48,7 @@
                 </h:form>
             </p:panel>
 
-            <p:tabView>
+            <p:tabView id="tabs">
                 <p:tab title="#{msgs.uebersicht}">
                     <ui:include src="/WEB-INF/templates/includes/processes/processList.xhtml"/>
                 </p:tab>
