--- a/Kitodo/src/main/webapp/pages/inc/tbl_Kopf.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc/tbl_Kopf.xhtml
@@ -17,6 +17,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:t="http://myfaces.apache.org/tomahawk"
+    xmlns:p="http://primefaces.org/ui"
     >
     <ui:fragment rendered="#{SessionForm.bitteAusloggen!=''}">
         <tr>
@@ -27,6 +28,9 @@
             </td>
         </tr>
     </ui:fragment>
+
+    <p:growl id="notifications" rendered="#{empty indexingForm.serverInformation}"
+             widgetVar="notifications" autoUpdate="true"  showDetail="true" sticky="true"/>
 
     <tr valign="top">
 
