remove rendered for error messages

--- a/Kitodo/src/main/webapp/pages/Main.xhtml
+++ b/Kitodo/src/main/webapp/pages/Main.xhtml
@@ -68,7 +68,7 @@
                                     <!-- globale Warn- und Fehlermeldungen -->
                                     <h:messages id="id5" globalOnly="true" errorClass="text_red"
                                                 infoClass="text_blue" showDetail="true" showSummary="true"
-                                                tooltip="true" rendered="#{not empty indexingForm.serverInformation}"/>
+                                                tooltip="true"/>
 
                                     <img src="#{HelperForm.logoUrl}"/>
 
@@ -79,7 +79,7 @@
                                     <!-- globale Warn- und Fehlermeldungen -->
                                     <h:messages id="id8" globalOnly="true" errorClass="text_red"
                                                 infoClass="text_blue" showDetail="true" showSummary="true"
-                                                tooltip="true" rendered="#{not empty indexingForm.serverInformation}"/>
+                                                tooltip="true"/>
 
                                     <p style="text-align: justify;">
                                         <h:outputText id="id9" style="text-align: justify;"
